--- a/tiger_compiler/TODO
+++ b/tiger_compiler/TODO
@@ -1,2 +1,3 @@
-add basic handling for declarations
-implement error-handling in the grammar
+think abt using monads in the type-checker
+    The symbol table could be split off into a monad (wrapper is Some)
+add recursion!
