--- a/tiger_compiler/TODO
+++ b/tiger_compiler/TODO
@@ -1,3 +1,2 @@
-think abt using monads in the type-checker
-    The symbol table could be split off into a monad (wrapper is Some)
-add recursion!
+re-write all operations on types to account for NAME (fuck you appel)
+add accurate positions
